# nycopencv

./: .gitignore  .vimrc  CMakeLists.txt  README.md  index.html  params.json
examples/cpp/: Stragnar_CV_Config.h.in  headshots.cpp
src/: 3d_recon.cpp  Stragnar_CV_Config.h.in  copy_matrix.cpp  headshots.cpp  hough_transform.cpp  terminator.cpp  video_cap.cpp  video_cap_tree.cpp  video_cap_two.cpp
src/introduction/: error_handling.cpp  video_cap2.cpp
